Fix the ColorPicker's popup's z-index relative to NumberInput. Closes #246

--- a/src/components/meet-setup/ColorPicker.module.scss
+++ b/src/components/meet-setup/ColorPicker.module.scss
@@ -18,6 +18,7 @@
 
 // Theming for the color selector.
 
+// A div functioning as a button.
 div.swatch {
   padding: 5px;
   background: #fff;
@@ -27,9 +28,15 @@ div.swatch {
   cursor: pointer;
 }
 
+// The color showing within the swatch-button.
 div.color {
   width: 36px;
   height: 14px;
   border-radius: 2px;
   // The background color is separately set by the JS.
+}
+
+// Used for the Popper div wrapping the Picker, to ensure it's on top of the NumberInput.
+div.onTop {
+  z-index: 999;
 }
